 Version 0.52
 ============

 Released on 

 New features and improvements:

   - CheckDBMSIntegrity: now involves plugins (todo #1042).
   - DDLUpdates: display OK + progression percent (todo #1047).
   - UserPreferences: check for balances and DBMS integrity on dossier opening (todo #744).

 Bug fixes:

   - ofaCheckBalances: get rid of rounding errors.
   - ofaDossierNewMini: fix dialog display at initialization time.
   - ofaExportAssistant: display the chosen string delimiter.
   - ofaExportAssistant: fix amounts export format.
   - ofaIDBConnect: setup admin credentials when restoring a database.
   - ofoTVAForm: fix ofo_tva_form_get_is_deletable() method.

 Other changes:

   - Define a separated 'my' library.
   - my_cell_renderer_date_xxx(): are renamed to my_date_renderer_xxx().
   - my_double_is_zero(): new function.
   - my_editable_date_xxx(): are renamed to my_date_editable_xxx().
   - my_cell_renderer_double_xxx(): are renamed to my_double_renderer_xxx().
   - my_editable_double_xxx(): are renamed to my_double_editable_xxx().
   - myDateCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myDecimalCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myFieldCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myIProgress: new interface.
   - myProgressBar: ofa-double, ofa-text and ofa-pulse signals are renamed to my-xxx equivalents.
   - ofa_amount_xxx(): new functions.
   - ofa_counter_xxx(): new functions.
   - ofs_currency_cmp(): new function.

-----------------------------------------------------------------------
 Version 0.51
 ============

 Released on 2016-03-17

 New features and improvements:

   - Recurrent: new plugin (todo #213).
   - ofaIDBModel: extended to let plugins check objects deletability (todo #1043). 

 Bug fixes:

   - ofaAccountProperties: force indicators to FALSE if root account.

 Other changes:

   - my_idialog_run_maybe_modal(): new method.
   - ofaAccountFrameBin: moved to core/.