@@ -239,6 +239,8 @@ myIWindow            *my_iwindow_present                   ( myIWindow *instance
 
 void                  my_iwindow_close                     ( myIWindow *instance );
 
+void                  my_iwindow_close_all                 ( void );
+
 void                  my_iwindow_msg_dialog                ( myIWindow *instance,
 																	GtkMessageType type,
 																	const gchar *msg );
